// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterTextDetection /> should clear a text detection 1`] = `
.emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 42px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #e0e0e0;
  background-color: #2e2e2e;
  padding-left: 12px;
  height: 100%;
}

.emotion-2:hover,
.emotion-2.focus-visible:focus,
.emotion-2 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #3b3b3b;
}

.emotion-3 {
  padding-left: 1px;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: #191919;
  width: 42px;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus,
.emotion-4 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-4:hover svg,
.emotion-4.focus-visible:focus svg,
.emotion-4 .noop svg {
  opacity: 1;
}

.emotion-4[aria-disabled=true],
.emotion-4 .noop {
  color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <button
      aria-label="Edit Text Detection"
      className="emotion-2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="emotion-3"
      >
        cats
      </span>
    </button>
    <button
      aria-label="Clear Text Detection"
      className="emotion-4"
      onClick={[Function]}
      title="Clear"
      type="button"
    >
      <svg
        data-file-name="cross.svg"
        height={20}
      />
    </button>
  </div>
</div>
`;

exports[`<FilterTextDetection /> should edit a text detection 1`] = `
.emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 42px;
  position: relative;
}

.emotion-2 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  -webkit-background-position: left 8px top 50%;
  background-position: left 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
  background-color: #2e2e2e;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjNGE0YTRhIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-2::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-2::-moz-placeholder {
  font-style: italic;
}

.emotion-2:-ms-input-placeholder {
  font-style: italic;
}

.emotion-2::placeholder {
  font-style: italic;
}

.emotion-2:hover {
  border: 1px solid #808080;
}

.emotion-2:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 42px;
  margin-left: 4px;
  border-radius: 2px;
  color: #ffffff;
  background-color: #3A5DFF;
  padding: 0;
  border: 0;
  cursor: pointer;
}

<form
  action=""
  method="post"
  onSubmit={[Function]}
>
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <input
        aria-label="Add Text Detection Filter"
        autoFocus={true}
        className="emotion-2"
        onChange={[Function]}
        placeholder="Filter by detected text"
        type="search"
        value="cats"
      />
      <button
        aria-disabled={false}
        aria-label="Search"
        className="emotion-3"
        onClick={[Function]}
        type="submit"
      >
        <svg
          color="#ffffff"
          data-file-name="plus.svg"
          height={20}
        />
      </button>
    </div>
  </div>
</form>
`;

exports[`<FilterTextDetection /> should select a facet 1`] = `
.emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 42px;
  position: relative;
}

.emotion-2 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  -webkit-background-position: left 8px top 50%;
  background-position: left 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
  background-color: #2e2e2e;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjNGE0YTRhIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-2::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-2::-moz-placeholder {
  font-style: italic;
}

.emotion-2:-ms-input-placeholder {
  font-style: italic;
}

.emotion-2::placeholder {
  font-style: italic;
}

.emotion-2:hover {
  border: 1px solid #808080;
}

.emotion-2:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 42px;
  margin-left: 4px;
  border-radius: 2px;
  color: #000000;
  background-color: #808080;
  padding: 0;
  border: 0;
  cursor: not-allowed;
}

<form
  action=""
  method="post"
  onSubmit={[Function]}
>
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <input
        aria-label="Add Text Detection Filter"
        autoFocus={true}
        className="emotion-2"
        onChange={[Function]}
        placeholder="Filter by detected text"
        type="search"
        value=""
      />
      <button
        aria-disabled={true}
        aria-label="Search"
        className="emotion-3"
        onClick={[Function]}
        type="submit"
      >
        <svg
          color="#3b3b3b"
          data-file-name="plus.svg"
          height={20}
        />
      </button>
    </div>
  </div>
</form>
`;
